# code_snipe

./: first_quant.m  genCheckBoard.m  nurbs.cpp  recv_wifi_img.py  show_his_summary.py  show_mp_from_loc.m
auto_test/: compare.py  config_modify.py  estimation_tools_call.py  evaluate50.py  kml_estimation.py  loc_build_run.sh  log_handle.py  run_loc_cases.py  run_local_compare_evaluate.py  try.py  variables.py
bag_process/: bag_addpose.cpp  bag_converter.cpp  bag_prepross.cpp  calib.yml  color_cloud.cpp  combine_scan.cpp  conv_cam2loam.py  extract_img.cpp  extract_imu.cpp  match_imgs.cpp  merge_cloud.cpp  merge_pc.cpp  plot_imu  plot_imu.py  pose_interpolation.py  velodyne_32C_bag_fix.cpp
bash_related/: bash_example.txt
bash_related/bag_rtv/: run.sh
bash_related/db/: gen.sh
bash_related/db_checker_l_r/: run.sh  run_modify_Db.sh
bash_related/db_desc_cal/: run.sh
bash_related/db_modifer/: run.sh
bash_related/loc/: run.sh
bash_related/modifer_test/: bag_list.txt  run.sh
bash_related/modify_conf/: modify_conf.py
bash_related/rtv_bag/: run.sh  run_try.sh
bash_related/run_loc/: looping_rtv_.sh
catkin_try/src/: CMakeLists.txt
ekf_ios/: ViewController.h  ViewController.mm
gazebo_try/gazebo/: gazebo_config.h
gazebo_try/gazebo_plugin_tutorial/: CMakeLists.txt  camp.cpp  chamo.world  gpsp.cpp  imup.cpp  model_push.cc
gazebo_try/ignition/: math.hh
gazebo_try/recording/: acc.txt  body.txt  cam_time.txt  gyro.txt
gazebo_try/sdf/: sdf.hh  sdf_config.h
hightlight/g2o example/: AlgoPlat_G2O.cpp  AlgoPlat_G2O.h
hightlight/match two img/: CMakeLists.txt  main.cpp
hightlight/serializaition for slam data/: CMakeLists.txt  ViewILibMain.cpp  ViewInterfaceImp.cpp  ViewInterfaceImp.h  copyLibToSys.sh  copyLibToSys_Linux.sh
hightlight/simple slam data structure/: CoreData.cpp  CoreData.h
hightlight/vis_slam/: GraphDrawer.cpp  GraphDrawer.hpp
ios_cali_imu/: OpenGLView.h  OpenGLView.mm  ViewController.h  ViewController.mm  common_header.h  customView.h  customView.mm  try_mm.mm
ios_cali_imu/util/: img_tool.cpp  img_tool.h
mex/: ReadGlobalMapFromM.cpp  ReadGlobalMapFromM.hpp  SaveGlobalMapToM.cpp  SaveGlobalMapToM.hpp
msckf_1d/: cost.m  main.m
pnp_recv_img/: file_upload.php  init_new_re.php  save_img.php  show_files.php
py_slam/: get_visible_mp.py  k.csv  main.py  pair.csv  pose_opt.csv
python/: convertName.py
python/ekf_try/: main_ekf.py
python/gen_server_data/: combinepictures.py  main.py  roadgeofunction.py  sortnumber.py
python/plotting/: CMakeLists.txt  plot_traj_fun.py  showTraj.py  slam_basic_case.py  transfer_traj.py
python/text_manipulate/: get_overlay.py
relocation_slam/include/: Frame.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  System.h  Tracking.h
relocation_slam/src/: Frame.cc  Initializer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc
robot framework/: new_slam_compare.txt
rviz_related/dependency_correlation/: CMakeLists.txt  package.xml
rviz_related/dependency_correlation/script/: run.sh
rviz_related/painting_cov/: CMakeLists.txt  cov.sh  package.xml
rviz_related/painting_cov/src/: main.cpp  main_forCC_BoundaryPaint_solid_dashed.cpp  main_forMPG_Paint.cpp
rviz_related/painting_cov/srv/: algo.srv
rviz_related/record_msg/: CMakeLists.txt  package.xml
rviz_related/record_msg/msg/: data_record.msg  gps_record.msg  img_record.msg  imu_pack.msg  imu_record.msg
rviz_related/ros_loc_server/: CMakeLists.txt  package.xml
rviz_related/ros_loc_server/msg/: gps_msg.msg  loc_predict_msg.msg  loc_update_msg.msg  match_info_msg.msg  reproj_err_msg.msg  rviz_control_msg.msg  server_img_msg.msg  view_control_msg.msg
rviz_related/ros_loc_server/src/: main.cpp  main.h
rviz_related/rviz_animated_view_controller/: CMakeLists.txt
rviz_related/rviz_animated_view_controller/include/rviz_animated_view_controller/: rviz_animated_view_controller.h
rviz_related/rviz_animated_view_controller/launch/: compact.rviz  full.rviz
rviz_related/rviz_animated_view_controller/src/: rviz_animated_view_controller.cpp
rviz_related/rviz_plugin_tutorials/: CMakeLists.txt  package.xml  plugin_description_compact.xml  plugin_description_full.xml
rviz_related/rviz_plugin_tutorials/conf/: settings.txt
rviz_related/rviz_plugin_tutorials/src/: RemoteControl.cpp  RemoteControl.h  context.cpp  context.h  image_widget.cpp  image_widget.h  imu_display.cpp  imu_display.h  my_panel.cpp  my_panel.h  my_panel.ui  record_play.cpp  record_play.h  remoteConHelper.cpp  remoteConHelper.h  teleop_panel.cpp  teleop_panel.h
rviz_related/show_map/: CMakeLists.txt  package.xml
rviz_related/show_map/src/: main.cpp
rviz_related/veh_msg/: CMakeLists.txt  package.xml
rviz_related/veh_msg/msg/: veh_msg.msg
rviz_try/: Localization.cpp
slam_cpp/Common/: AlgoInterfaceImp.cpp  AlgoInterfaceImp.h  NewMPCreator.cpp  NewMPCreator.h  Utils.cpp  Utils.h  comAglo.cpp  comAglo.h  gps_est.cpp  gps_est.h
slam_cpp/TestCase/: CMakeLists.txt  TestCaseParser.cpp  TestCaseParser.hpp
slam_cpp/XmlSLAM/: CMakeLists.txt  DataInterface.hpp  DataInterfaceImp.cpp  DataInterfaceImp.hpp  XmlSLAM.cpp  XmlSLAM.hpp  main.cpp  main_est.cpp
slam_cpp/coreDataLib/: CMakeLists.txt  coreData.cpp  coreData.hpp
slam_cpp/dataStructure/: Frame.cpp  Frame.hpp  GlobalMap.cpp  GlobalMap.hpp  LocalMap.hpp  TypeDef.cpp  (+3 more)
slam_cpp/platform/: CMakeLists.txt  Platform.cpp  Platform.hpp
slam_cpp/platform/Tool/: Fill2DMatches.cpp  GMapHelper.cpp  MapIO.cpp  Visualization.cpp  outPut.cpp  outPut.h  paramParser.cpp  paramParser.hpp  utils.cpp  utils.hpp
slam_cpp/platform/initializer/: MatchByOpticFlow.cpp  tryInitPose.cpp
slam_cpp/platform/mapping/: Mapping.cpp
slam_cpp/platform/optimizer/: OptimizeByLocalBA.cpp  OptimizeByLocalBA.hpp
slam_cpp/platform/tracker/: Tracker.cpp
sophus_try/: CMakeLists.txt  main.cpp
test_pnp/: CMakeLists.txt  test_pnp.cpp
test_voting/: CMakeLists.txt  main.cpp  main_helper.h  pose_voting.cpp  pose_voting.h
web/: index.html  order.php  test.php  wx_sample.php
(+416 files in other folders)
