<package>
  <name>rviz_plugin_tutorials</name>
  <version>0.9.2</version>
  <description>
     Tutorials showing how to write plugins for RViz.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_plugin_tutorials</url>
  <author>Dave Hershberger</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>veh_msg</build_depend>
  <build_depend>rviz_config</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>loc_server</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
